--- a/PythonQt.private.MeshScriptAccess/index.html
+++ b/PythonQt.private.MeshScriptAccess/index.html
@@ -238,7 +238,7 @@
 </dl><h3 id="classname"><a title="classname" href="#classname" class="anchor hidden-xs"><span class="octicon octicon-link"></span></a>className</h3><pre><code>x = mesh.className()
 </code></pre><dl>
 <dt>x : str</dt>
-<dd><code>'mesh.criptAccess'</code></dd>
+<dd><code>'MeshScriptAccess'</code></dd>
 </dl><h3 id="connect"><a title="connect" href="#connect" class="anchor hidden-xs"><span class="octicon octicon-link"></span></a>connect</h3><pre><code>x = mesh.connect(a, b, c, d, e)
 </code></pre><dl>
 <dt>a : QObject (?)</dt>
