--- a/script_access.html
+++ b/script_access.html
@@ -2,6 +2,7 @@
 layout: default
 title: Script Access
 description: Using the BrainVoyager Scripting API
+permalink: /script-access/
 isHome: false
 ---
 
