--- a/script_access.html
+++ b/script_access.html
@@ -4,7 +4,7 @@ title: Script Access
 description: Using the BrainVoyager Scripting API
 isHome: false
 ---
-
+test
 <section class="bs-docs-section">
 {% capture my-include1 %}{% include script_access.md %}{% endcapture %}
 {{ my-include1 | markdownify }}
